<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.halo.dictionary.mvp.ui.AddEntryActivity">

    <EditText
        android:id="@+id/tvWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="108dp"
        android:hint="@string/word_hint"
        android:selectAllOnFocus="true"
        android:inputType="textShortMessage"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <EditText
        android:id="@+id/tvTranslation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvWord"
        android:ems="10"
        android:hint="@string/translation_hint"
        android:inputType="textMultiLine"
        android:maxLines="3"
        android:minLines="2"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <Button
        android:id="@+id/buttonSaveEntry"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/tvTranslation"
        android:text="@string/button_save_entry_title"
        android:textColor="@drawable/button_add"
        android:textSize="28sp"
        android:layout_marginEnd="16dp"/>

</RelativeLayout>
